Fixed rounded borders on dark mode gallery

--- a/themes/kmom04/scss/style-dark.scss
+++ b/themes/kmom04/scss/style-dark.scss
@@ -123,7 +123,7 @@ html, body {
     filter: brightness(.8) contrast(1.2) url('../filter.svg#red-sunset');
 }
 
-p img {
+body img {
     border-radius: 15px;
 }
 
